--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rowdies&family=Source+Code+Pro"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code"
       rel="stylesheet"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
