edit title and animated div

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code"
       rel="stylesheet"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>&#60;huy-vo/&#62;</title>
   </head>
   <body>
     <noscript>
